// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Home getTexts should render with width < 460px 1`] = `
Array [
  <Translate
    id="Job"
  />,
  <Translate
    id="Welcome-short"
  />,
]
`;

exports[`Home getTexts should render with width > 460px 1`] = `
Array [
  <Translate
    id="Job"
  />,
  <Translate
    id="Welcome"
  />,
]
`;

exports[`Home should render without throwing an error 1`] = `
<Home>
  <Home__HomeSection>
    <section
      className="Home__HomeSection-sc-1eskvms-0 PfWQz"
    >
      <Anchor
        id="Home"
      >
        <span
          className="Anchor-sc-31ub0h-0 kpPgov"
          id="Home"
        />
      </Anchor>
      <Home__Background>
        <div
          className="Home__Background-sc-1eskvms-3 pgZLE"
        />
      </Home__Background>
      <Home__Overlay>
        <div
          className="Home__Overlay-sc-1eskvms-4 cAmZwL"
        >
          <Container
            fluid={false}
          >
            <div
              className="container"
            >
              <Home__Header>
                <header
                  className="Home__Header-sc-1eskvms-5 iQPBrm"
                >
                  <Home__TitleName>
                    <h1
                      className="Home__TitleName-sc-1eskvms-1 gNtmoT"
                    >
                      <Translate
                        id="Name"
                      >
                        <WrappedTranslate
                          context={
                            Object {
                              "activeLanguage": undefined,
                              "addTranslation": [Function],
                              "addTranslationForLanguage": [Function],
                              "defaultLanguage": undefined,
                              "ignoreTranslateChildren": false,
                              "initialize": [Function],
                              "languages": Array [],
                              "renderToStaticMarkup": false,
                              "setActiveLanguage": [Function],
                              "translate": [Function],
                            }
                          }
                          id="Name"
                        >
                          Missing translationId: Name for language: \${ languageCode }
                        </WrappedTranslate>
                      </Translate>
                    </h1>
                  </Home__TitleName>
                  <Home__TitleJob>
                    <h2
                      className="Home__TitleJob-sc-1eskvms-2 jQsdfQ"
                    >
                      <Typist>
                        <div>
                          <div
                            className="type-effect"
                            key="0"
                          >
                            <Translate
                              id="Job"
                              key="Job"
                            >
                              <WrappedTranslate
                                context={
                                  Object {
                                    "activeLanguage": undefined,
                                    "addTranslation": [Function],
                                    "addTranslationForLanguage": [Function],
                                    "defaultLanguage": undefined,
                                    "ignoreTranslateChildren": false,
                                    "initialize": [Function],
                                    "languages": Array [],
                                    "renderToStaticMarkup": false,
                                    "setActiveLanguage": [Function],
                                    "translate": [Function],
                                  }
                                }
                                id="Job"
                              >
                                Missing translationId: Job for language: \${ languageCode }
                              </WrappedTranslate>
                            </Translate>
                            <style>
                              
        .type-effect {
          overflow: hidden;
          white-space: nowrap;
          border-right: 0.15em solid #ecf0f1;
          animation: typing 1.25s steps(40, end),
            blink-caret 0.5s step-end infinite;
        }
        /* The typing effect */
        @keyframes typing {
          from {
            width: 0;
          }
          to {
            width: 100%;
          }
        }
        /* The typewriter cursor effect */
        @keyframes blink-caret {
          from,
          to {
            border-color: transparent;
          }
          50% {
            border-color: #ecf0f1;
          }
        }
      
                            </style>
                          </div>
                        </div>
                      </Typist>
                    </h2>
                  </Home__TitleJob>
                </header>
              </Home__Header>
            </div>
          </Container>
        </div>
      </Home__Overlay>
    </section>
  </Home__HomeSection>
</Home>
`;
